--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nuxt": "3.0.0",
     "prettier": "^2.8.0",
     "prettier-plugin-tailwindcss": "^0.2.0",
+    "sass": "^1.56.1",
     "vue-tsc": "^1.0.10"
   }
 }
